# HeuristicAlgorithmsUsingTreeDecompositions

./: .gitignore  CMakeLists.txt  README.md
ExperimentFiles/: bipartite_interesting.txt  cub_all.txt  cub_interesting.txt  cub_small.txt  eulerian_interesting.txt  eulerian_small.txt  first_lewis_generated.exp  generation_file.txt  greedy_vs_growth.txt  grid_graphs.exp  initial_experiment.exp  initial_solvers.sol  initial_v2_experiment.exp  lewis_random_10.exp  lewis_random_50.exp  lewis_random_greedy_vs_growth.exp  lewis_random_variation_precolouring.exp  non_ham_interesting.txt  pace_small.exp  planar_conn_all.txt  planar_conn_interesting.txt  planar_conn_small.txt  small_random_graphs.exp  solvers.sol  solvers.txt  stress_test.txt  test.txt  trees_all.txt  trees_interesting.txt  trees_small.txt
data/: ClawFree.xlsx
documents/intermediatePresentation/: beamerthemekuleuven2.sty  bibliography.bib  main.tex
documents/papersMasterThesisTreeDecompositions/: README.txt
documents/papersMasterThesisTreeDecompositions/1introductionStartHere/: README.txt
documents/papersMasterThesisTreeDecompositions/3computingTreeDecompositions/: NuttigeLink.txt
instances/: readme.md
results/: GeneralTest.xlsx  SMAC.csv  SanityChecks.xlsx
src/: CustomTypes.h  TODO.txt  TreeDecompositionSolverTimer.cpp  TreeDecompositionSolverTimer.h  experimentalAnalysis.cpp  experimentalAnalysis.h  main.cpp  rng.h
src/ConstructingTreeDecompositions/: Constructor.cpp  Constructor.h  TreeDecompositionSolverTimer.cpp
src/ConstructingTreeDecompositions/FlowCutter/: FlowCutterAdapter.cpp  FlowCutterAdapter.h
src/ConstructingTreeDecompositions/Jdrasil/: JdrasilAdapter.cpp  JdrasilAdapter.h
src/DataStructrures/: Bag.cpp  Bag.h  Colouring.cpp  Colouring.h  Graph.cpp  Graph.h  PartialColouring.cpp  PartialColouring.h  Reader.cpp  Reader.h  TreeDecomposition.cpp  TreeDecomposition.h
src/DataStructrures/Bags/: Bag.cpp  Bag.h  ForgetVertexBag.cpp  ForgetVertexBag.h  IntroduceForgetVertexBagBase.cpp  IntroduceForgetVertexBagBase.h  IntroduceVertexBag.cpp  IntroduceVertexBag.h  JoinBag.cpp  JoinBag.h  LeafBag.cpp  LeafBag.h  NiceBag.cpp  NiceBag.h  StandardBag.cpp  StandardBag.h
src/DataStructures/: DataStructuresAliases.h
src/DataStructures/Colouring/: AdvancedMHVEvaluator.cpp  AdvancedMHVEvaluator.h  BasicMHVEvaluator.cpp  BasicMHVEvaluator.h  Colouring.cpp  Colouring.h  ColouringEvaluator.cpp  ColouringEvaluator.h  ColouringQueue.cpp  ColouringQueue.h  MHVEvaluator.cpp  MHVEvaluator.h  MutableColouring.cpp  MutableColouring.h
src/DataStructures/ColouringEvaluator/: BasicMHVEvaluator.cpp  BasicMHVEvaluator.h  ColouringEvaluator.cpp  ColouringEvaluator.h  ColouringQueue.h  PotentialHappyColouredMHVEvaluator.cpp  PotentialHappyColouredMHVEvaluator.h  PotentialHappyUncolouredMHVEvaluator.cpp  PotentialHappyUncolouredMHVEvaluator.h
src/DataStructures/DynamicProgramming/: DynamicProgrammingTable.cpp  DynamicProgrammingTable.h  HappyVerticesTableEntry.cpp  HappyVerticesTableEntry.h  TableEntry.cpp  TableEntry.h
src/DataStructures/Evaluator/: BasicMHVEvaluator.cpp  BasicMHVEvaluator.h  Evaluator.cpp  Evaluator.h  GrowthMHVEvaluator.cpp  GrowthMHVEvaluator.h  PotentialHappyColouredMHVEvaluator.cpp  PotentialHappyColouredMHVEvaluator.h  PotentialHappyUncolouredMHVEvaluator.cpp  PotentialHappyUncolouredMHVEvaluator.h  potentialHappyMHVEvaluator.cpp  potentialHappyMHVEvaluator.h
src/DataStructures/Graph/: Graph.cpp  Graph.h
src/DataStructures/Solution/: ColourAssignment.cpp  ColourAssignment.h  ColourAssignments.cpp  ColourAssignments.h  HappyVerticesAssignments.cpp  HappyVerticesAssignments.h
src/DataStructures/TreeDecomposition/: Bag.cpp  Bag.h  ForgetNode.cpp  ForgetNode.h  ForgetVertexBag.h  IntroduceForgetNodeBase.cpp  IntroduceForgetNodeBase.h  IntroduceForgetVertexBagBase.cpp  IntroduceNode.cpp  IntroduceNode.h  IntroduceVertexBag.h  JoinBag.cpp  JoinNode.cpp  JoinNode.h  LeafBag.cpp  LeafNode.cpp  LeafNode.h  NiceBag.cpp  NiceBag.h  NiceNode.cpp  NiceNode.h  Node.cpp  Node.h  StandardBag.cpp  StandardNode.cpp  StandardNode.h  TreeDecomposition.h
src/ExperimentalAnalysis/: Experiment.h  experimentalAnalysis.cpp  experimentalAnalysis.h
src/FlowCutter/: FlowCutterAdapter.cpp  FlowCutterAdapter.h
src/IO/: ReadComponents.cpp  ReadG6File.cpp  Reader.cpp  Reader.h  ReaderExperiment.cpp  ReaderGraph.cpp  ReaderNiceTreeDecomposition.cpp  ReaderTreeDecomposition.cpp  colourGraph.cpp  readColouringVector.cpp  readEvaluator.cpp  readForgetNodeHandler.cpp  readIntroduceNodeHandler.cpp  readJoinNodeHandler.cpp  readLeafNodeHandler.cpp
src/Jdrasil/: JdrasilAdapter.cpp  JdrasilAdapter.h
src/MaximumHappyVertices/: Colouring.cpp  Colouring.h  MaximumHappyVerticesSolver.cpp  MaximumHappyVerticesSolver.h
src/MaximumHappyVertices/Colouring/: Colouring.cpp  Colouring.h  PartialColouring.cpp  PartialColouring.h
src/MaximumHappyVertices/ConstructionAlgorithms/: GreedyMHV.cpp  GreedyMHV.h  GrowthMHV.cpp  GrowthMHV.h
src/MaximumHappyVertices/HeuristicTreeDecompositionAlgorithms/: HeuristicTreeDecompositionSolver.cpp  HeuristicTreeDecompositionSolver.h
src/SolverV2/: ColourAssignmentV2.cpp  ColourAssignmentV2.h  HappyVertexAssignmentV2.cpp  HappyVertexAssignmentV2.h  HeuristicMHVSolverV2.cpp  HeuristicMHVSolverV2.h  HeuristicSolverRankingV2.cpp  HeuristicSolverRankingV2.h  SolverV2HappyUnhappyOnly.txt  t.txt  temp.txt
src/Solvers/: ExactTreeDecompositionSolverBase.cpp  ExactTreeDecompositionSolverBase.h  SolverBase.h
src/Solvers/ExactTreeDecompositionUtility/: ExactTreeDecompositionRanking.h
src/Solvers/HeuristicTreeDecompositionSolver/: HeuristicTreeDecompositionSolver.cpp  HeuristicTreeDecompositionSolver.h  HeuristicTreeDecompositionSolverForget.cpp  HeuristicTreeDecompositionSolverIntroduce.cpp  HeuristicTreeDecompositionSolverJoin.cpp  HeuristicTreeDecompositionSolverLeaf.cpp
src/Solvers/MaximumHappyVertices/: ExactTreeDecompositionRankingMHV.cpp  MaximumHappyVerticesSolver.h  (+2 more)
src/TreeDecomposition/: Bag.cpp  Bag.h  Reader.cpp  Reader.h
src/TreeDecompositionFiles/: my_first_graph.tw  test.tw
(+58 files in other folders)
