cmake_minimum_required(VERSION 3.10)
project(HeuristicAlgorithmsUsingTreeDecompositions)

set(CMAKE_CXX_STANDARD 17)

add_executable(HeuristicAlgorithmsUsingTreeDecompositions
        src/main.cpp src/ConstructingTreeDecompositions/FlowCutter/FlowCutterAdapter.cpp
        src/ConstructingTreeDecompositions/FlowCutter/FlowCutterAdapter.h
        src/DataStructures/TreeDecomposition/Node.cpp
        src/DataStructures/TreeDecomposition/Node.h
        src/IO/Reader.cpp
        src/IO/Reader.h
        src/ConstructingTreeDecompositions/Jdrasil/JdrasilAdapter.cpp
        src/ConstructingTreeDecompositions/Jdrasil/JdrasilAdapter.h
        src/DataStructures/TreeDecomposition/TreeDecomposition.h
        src/ConstructingTreeDecompositions/TreeDecompositionSolverTimer.cpp
        src/ConstructingTreeDecompositions/TreeDecompositionSolverTimer.h
        src/DataStructures/Graph/Graph.cpp
        src/DataStructures/Graph/Graph.h
        src/DataStructures/Colouring/Colouring.cpp
        src/DataStructures/Colouring/Colouring.h
        src/Solvers/SolverBase.h
        src/Solvers/MaximumHappyVertices/ConstructionAlgorithms/GreedyMHV.cpp
        src/Solvers/MaximumHappyVertices/ConstructionAlgorithms/GreedyMHV.h
        src/DataStructures/Colouring/MutableColouring.cpp
        src/DataStructures/Colouring/MutableColouring.h
        src/Solvers/MaximumHappyVertices/ConstructionAlgorithms/GrowthMHV.cpp
        src/Solvers/MaximumHappyVertices/ConstructionAlgorithms/GrowthMHV.h
        src/Solvers/HeuristicTreeDecompositionSolver/HeuristicTreeDecompositionSolver.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/HeuristicTreeDecompositionSolver.h
        src/DataStructures/TreeDecomposition/NiceNode.cpp
        src/DataStructures/TreeDecomposition/NiceNode.h
        src/DataStructures/TreeDecomposition/StandardNode.cpp
        src/DataStructures/TreeDecomposition/StandardNode.h
        src/DataStructures/TreeDecomposition/IntroduceNode.cpp
        src/DataStructures/TreeDecomposition/IntroduceNode.h
        src/DataStructures/TreeDecomposition/ForgetNode.cpp
        src/DataStructures/TreeDecomposition/ForgetNode.h
        src/DataStructures/TreeDecomposition/IntroduceForgetNodeBase.cpp
        src/DataStructures/TreeDecomposition/IntroduceForgetNodeBase.h
        src/DataStructures/TreeDecomposition/JoinNode.cpp
        src/DataStructures/TreeDecomposition/JoinNode.h
        src/DataStructures/TreeDecomposition/LeafNode.cpp
        src/DataStructures/TreeDecomposition/LeafNode.h
        src/IO/ReaderGraph.cpp
        src/IO/ReaderTreeDecomposition.cpp
        src/IO/ReaderNiceTreeDecomposition.cpp
        src/DataStructures/DataStructuresAliases.h
        src/DataStructures/Colouring/ColouringQueue.cpp
        src/DataStructures/Colouring/ColouringQueue.h
        src/DataStructures/Colouring/ColouringEvaluator.cpp
        src/DataStructures/Colouring/ColouringEvaluator.h
        src/DataStructures/Colouring/BasicMHVEvaluator.cpp
        src/DataStructures/Colouring/BasicMHVEvaluator.h
        src/Solvers/MaximumHappyVertices/MaximumHappyVerticesSolver.h
        src/DataStructures/Colouring/AdvancedMHVEvaluator.cpp
        src/DataStructures/Colouring/AdvancedMHVEvaluator.h
        src/Solvers/HeuristicTreeDecompositionSolver/ForgetNodeHandler/PassiveForgetNodeHandler.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/ForgetNodeHandler/ConcreteForgetNodeHandlers.h
        src/Solvers/HeuristicTreeDecompositionSolver/LeafNodeHandler/PassiveLeafNodeHandlers.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/LeafNodeHandler/ConcreteLeafNodeHandlers.h
        src/Solvers/HeuristicTreeDecompositionSolver/JoinNodeHandler/StaticOrderJoinNodeHandler.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/JoinNodeHandler/ConcreteJoinNodeHandlers.h
        src/Solvers/HeuristicTreeDecompositionSolver/IntroduceNodeHandler/ColourAllIntroduceNodeHandler.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/IntroduceNodeHandler/ConcreteIntroduceNodeHandlers.h
        src/Solvers/HeuristicTreeDecompositionSolver/JoinNodeHandler/StaticOrderJoinNodeHandler.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/JoinNodeHandler/DynamicOrderJoinNodeHandler.cpp
        src/Solvers/HeuristicTreeDecompositionSolver/IntroduceNodeHandler/BestColourIntroduceNodeHandler.cpp
        src/ExperimentalAnalysis/experimentalAnalysis.cpp
        src/ExperimentalAnalysis/experimentalAnalysis.h
        src/ExperimentalAnalysis/Experiment.h)
